--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,31 +1,29 @@
 .b-example-divider {
-    height: 3rem;
-    background-color: rgb(255, 251, 0);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
+  height: 3rem;
+  background-color: rgb(255, 251, 0);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
   font-family: 'Varsity';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Varsity'), url('../assets/fonts/VarsityTeam-Bold.otf') format('opentype');
+  src: url('../assets/fonts/VarsityTeam-Bold.otf');
 }
 
 .bg-dark-cs {
-  background-color: #000!important;
+  background-color: #000 !important;
   color: white;
 }
 
 .bg-mokleters {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../assets/footer/bg.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/footer/bg.png");
   height: 50%;
   background-position: 100% 35%;
   background-repeat: no-repeat;
@@ -39,13 +37,13 @@
 }
 
 .pymy-custom {
-  padding-top: 3.1rem!important;
-  margin-top: 3.1rem!important;
+  padding-top: 3.1rem !important;
+  margin-top: 3.1rem !important;
 }
 
 .full-page {
-  height:100vh;
-  width:100%;
+  height: 100vh;
+  width: 100%;
 }
 
 .varsity-text {
@@ -53,8 +51,8 @@
   font-style: normal;
   font-weight: bold;
   font-size: 64px;
-  line-height: 70px;
   letter-spacing: 0.08em;
+  line-height: 1.5em !important;
 }
 
 .text-red {
@@ -62,45 +60,70 @@
 }
 
 .glass {
-  background: rgba( 0, 0, 0, 0.25 );
+  background: rgba(0, 0, 0, 0.25);
   box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.37);
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .shake {
-	animation: shake-animation 4.72s ease infinite;
-	transform-origin: 50% 50%;
-  }
-  .element {
-    margin: 0 auto;
-    width: 150px;
-    height: 150px;
-    background: red;
-    }
-    @keyframes shake-animation {
-     0% { transform:translate(0,0) }
-    1.78571% { transform:translate(5px,0) }
-    3.57143% { transform:translate(0,0) }
-    5.35714% { transform:translate(5px,0) }
-    7.14286% { transform:translate(0,0) }
-    8.92857% { transform:translate(5px,0) }
-    10.71429% { transform:translate(0,0) }
-    100% { transform:translate(0,0) }
-    }
-
-.btn-danger {
-  background-color: #D75252!important;
-  border-radius: 0!important;
-  border: none!important;
-  font-size: 18px!important;
-  color: rgb(255, 255, 255)!important;
-  font-family: 'Inter', sans-serif!important;
+  animation: shake-animation 4.72s ease infinite;
+  transform-origin: 50% 50%;
 }
 
-.btn-danger:hover{
+.element {
+  margin: 0 auto;
+  width: 150px;
+  height: 150px;
+  background: red;
+}
+
+@keyframes shake-animation {
+  0% {
+    transform: translate(0, 0)
+  }
+
+  1.78571% {
+    transform: translate(5px, 0)
+  }
+
+  3.57143% {
+    transform: translate(0, 0)
+  }
+
+  5.35714% {
+    transform: translate(5px, 0)
+  }
+
+  7.14286% {
+    transform: translate(0, 0)
+  }
+
+  8.92857% {
+    transform: translate(5px, 0)
+  }
+
+  10.71429% {
+    transform: translate(0, 0)
+  }
+
+  100% {
+    transform: translate(0, 0)
+  }
+}
+
+.btn-danger {
+  background-color: #D75252 !important;
+  border-radius: 0 !important;
+  border: none !important;
+  font-size: 18px !important;
+  color: rgb(255, 255, 255) !important;
+  font-family: 'Inter', sans-serif !important;
+}
+
+.btn-danger:hover {
   background-color: rgb(219, 116, 116) !important;
 }
 
@@ -108,4 +131,25 @@ img {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.navbar-item {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  line-height: 21.94px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.navbar-brand {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 19.6px;
+  letter-spacing: .08em;
+  margin-top: -1px;
+  margin-right: 0 !important;
+  font-family: Varsity, "Montserrat";
 }
