--- a/src/css/Hero.scoped.css
+++ b/src/css/Hero.scoped.css
@@ -58,19 +58,20 @@
 .arrow,
 .arrow:before {
   position: absolute;
-  left: 50%; 
 }
 
 .arrow {
-  width: 40px;
-  height: 40px;
-  top: 40%;
-  margin: 50vh 0 0 -25px;
+  width: 20px;
+  height: 20px;
   -webkit-transform: rotate(45deg);
   border-left: none;
   border-top: none;
   border-right: 2px #fff solid;
-  border-bottom: 2px #fff solid; }
+  border-bottom: 2px #fff solid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 .arrow:before {
   content: '';
@@ -84,7 +85,8 @@
   border-bottom: 1px #fff solid;
   animation-duration: 2s;
   animation-iteration-count: infinite;
-  animation-name: arrow; }
+  animation-name: arrow; 
+}
 
 @keyframes arrow {
   0% {
