--- a/src/css/navbar-hitam.scoped.css
+++ b/src/css/navbar-hitam.scoped.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Varsity';
+  src: url('../assets/fonts/VarsityTeam-Bold.otf');
+}
+
 .navbar{
   background-color: transparent;
   transition: .6s;
