--- a/src/css/navbar.scoped.css
+++ b/src/css/navbar.scoped.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Varsity';
+  src: url('../assets/fonts/VarsityTeam-Bold.otf');
+}
+
 .navbar{
   background-color: transparent;
   transition: .6s;
@@ -90,5 +95,11 @@ justify-content: center;
 @media (max-width: 800px) {
   .line{
     width: 80%;
+  }
+}
+
+@media (max-width: 420px) {
+  .nav-item.navbar-item.menu{
+    opacity: 0;
   }
 }
