--- a/src/css/Organization.css
+++ b/src/css/Organization.css
@@ -1,32 +1,8 @@
-section{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+#organization{
+    background-image: url(../assets/organization/background.png);
 }
 
-.organization{
-    width: 100%;
-    height: 100vh;
-    background: #2f2f2f;   
-}
-.orga{    
-    margin-bottom: -140px !important;
-    /* SEMENTARA */
-}
-.containerr{
-    margin: 150px 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.alice-carousel__next-btn-item,
-.alice-carousel__prev-btn-item{
-    display: none !important;    
-}
+/* alice-carousel */
 .alice-carousel__dots-item,
 .alice-carousel__dots-item.__active{
     margin-top: 55px !important;
@@ -34,207 +10,116 @@ section{
     height: 5px !important;
     transition: .7s !important;
 }
+
 .alice-carousel__dots-item{
     background-color: #808080 !important;
     width: 37px !important;
 }
+
 .alice-carousel__dots-item.__active{
     background-color: #D75252 !important;
     width: 59px !important;
 }
-.cardd{
-    width: 300px;
-    height: 400px;
-    margin: 0 20%;
+
+.alice-carousel__prev-btn-item, .alice-carousel__next-btn-item {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #D75252;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    background-color: #D75252 !important;
+    border-radius: 20% !important;
+    border: none !important;
+    font-size: 18px !important;
+    color: rgb(255, 255, 255) !important;
+    font-family: 'Inter', sans-serif !important;
+}
+
+@media only screen and (min-width: 600px) {
+    .alice-carousel__next-btn-item,
+    .alice-carousel__prev-btn-item{
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .alice-carousel__dots-item{
+        display: none !important;
+    }
+}
+
+/* card-cstm */
+.card-cstm{
+    width: 21rem;
+    height: 100%;
+    margin-left: auto!important;
+    margin-right: auto!important;
     background-color: #fff;
     transition: .5s;
-    
 }
-.atas{
-    border-top: #D75252 solid 20px;
-    opacity: 0;
-}
-.cardd p,h3,span{
+
+.card-cstm p,h3,span{
     transition: .5s;
 }
-.cardd span{
+
+.card-cstm span{
     opacity: 0;
     color: #D75252;
 }
-.cardd .cardd-img{
+
+.card-cstm .card-cstm-img{
     width: 300px;
     height: 170px;
     overflow: hidden;
 }
 
-.cardd-img img{
+.card-cstm-img img{
     height: 100px;
     margin: 50px 33%;
 }
-/* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
 
-.pustel-img{
-    margin: 50px 28% !important;
-}
-
-.metic-img{
-    width: 250px;
-    margin: 50px 10% !important;
-}
-.mac-img{
-    width: 500px !important;
-    height: 500px !important;
-    margin: 20px 0% !important;
-}
-.palwaga-img{
-    width: 300px !important;
-    height: 130px !important;
-    margin: 40px 0% !important;
-}
-.pmr-img{
-    width: 300px !important;
-    height: 120px !important;
-    margin: 50px 0% !important;
-}
-.tsbc-img{
-    width: 300px !important;
-    height: 120px !important;
-    margin: 50px 0% !important;
-}
-.tscc-img{
-    width: 200px !important;
-    height: 300px !important;
-    margin: 25px 16% !important;
-}
-.tsfc-img{
-    margin: 50px 25% !important;
-}
-.tsvc-img{
-    width: 100px !important;
-    height: 200px !important;
-    margin: 15px 33% !important;
-}
-.modal-metic{
-    height: 90px;
-    margin: 7vh 50px;
-}
-.modal-pustel{
-    height: 130px;
-    margin: 7vh 148px;
-}
-.modal-mac{
-    height: 200px;
-    margin: 4vh 135px;
-}
-.modal-palwaga{
-    height: 200px;
-    margin: 4vh 175px;
-}
-.modal-pmr{
-    height: 150px;
-    margin: 4vh 189px;
-}
-.modal-tsbc{
-    height: 150px;
-    margin: 4vh 156px;
-}
-.modal-tscc{
-    height: 200px;
-    margin: 4vh 135px;
-}
-.modal-tsfc{
-    height: 150px;
-    margin: 4vh 117px;
-}
-.modal-tsvc{
-    height: 200px;
-    margin: 4vh 155px;
-}
-/* ============= END ============ */
-.cardd-body{
+.card-cstm-body{
     height: 200px;    
     text-align: justify;
     padding: 20px;
 }
 
-.backgroundd{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    background-image: url(../assets/organization/background.png);  
-    transition: .6s;  
+.card-cstm:hover{
+    transform: translateY(-13px);
 }
 
-.cardd:hover{
-    transform: translateY(-13px);  
-}
-.cardd:hover p{
+.card-cstm:hover p{
     transform: translateY(-10px);    
     transition: .5s;
 }
-.cardd:hover h3{
+
+.card-cstm:hover h3{
     transform: translateY(-10px);    
     transition: .5s;
 }
-.cardd:hover span{
+
+.card-cstm:hover span{
     opacity: 1; 
     transition: .5s;
 }
-.cardd:hover .atas{
-    opacity: 1;
-    transition: .9s;
-}
 
-/* Untuk card hover dan background akan berubah */
-/* kelihatanya .cardd:nth-child():hover ~ .backgroundd 
- tidak kedetect 
- 
- karena errornya atau bug muncul setelah
- menggunakan carousel 
- 
- dimana yang sebelumnya card di dalam
- render sekarang ada di function carousel - items[] */
-.cardd:nth-child(1):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire.jpg) !important;
-    background-size: cover !important;
-}
-.cardd:nth-child(2):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire2.jpg) !important;
-    background-size: cover;
-}
-.cardd:nth-child(3):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire3.jpg) !important;
-    background-size: cover;
-}
-.cardd:nth-child(4):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire.jpg) !important;
-    background-size: cover !important;
-}
-.cardd:nth-child(5):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire2.jpg) !important;
-    background-size: cover;
-}
-.cardd:nth-child(6):hover ~ .backgroundd{
-    background-image: url(../assets/organization/Fire3.jpg) !important;
-    background-size: cover;
-}
-.modal-content{
-    border-top: none;
-    border-radius: 5px!important;
-}
-/* .modal-header{
-    border: none !important; 
-    border-top-width: 3px!important;
-    border-top-color: #D85252!important;
-    border-radius: 4px 4px 0 0 !important;  
-    padding: 0;     
-} */
-
+/* modal */
 .modal-header {
     border: 100px!important; 
     border-top: 13px solid #d75252!important;
 }
+
 .modal h1{
     font-size: 5vh;
     text-align: center;
@@ -245,6 +130,7 @@ section{
     line-height: 52px;
     letter-spacing: 0.08em;
 }
+
 .modal-footer{
     border: none !important;
     background-image: url(../assets/organization/modal-footer.png);
@@ -254,315 +140,8 @@ section{
     width: 480px;
     background-size: cover;
 }
+
 .modal-logo{
     height: 120px;
     margin: 7vh 170px;
-}
-@media screen and (max-width: 1270px){
-    .cardd{
-        margin: 0 5vw;
-    }  
-} 
-@media screen and (max-width: 1024px){
-    .cardd{
-        margin: 0 10vw;
-    }  
-} 
-@media screen and (max-width: 960px){    
-    .cardd{
-        width: 200px;
-        margin: 0 13vw;
-    }    
-    .cardd-img img{
-        width: 75px;
-        margin: 50px 60px;
-    }
-    /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
-    .pustel-img{
-        margin: 50px 22% !important;
-    }
-
-    .metic-img{
-        width: 140px !important;
-        margin: 50px 10% !important;
-    }
-    .mac-img{
-        width: 120px !important;
-        height: 120px !important;
-        margin: 40px 14% !important;
-    }
-    .palwaga-img{
-        width: 200px !important;
-        height: 100px !important;
-        margin: 50px 0% !important;
-    }
-    .pmr-img{
-        width: 200px !important;
-        height: 100px !important;
-        margin: 55px 0% !important;
-    }
-    .tsbc-img{
-        width: 200px !important;
-        height: 110px !important;
-        margin: 50px 0% !important;
-    }
-    .tscc-img{
-        width: 130px !important;
-        height: 300px !important;
-        margin: 25px 13% !important;
-    }
-    .tsfc-img{
-        width: 130px !important;
-        height: 300px !important;
-        margin: 22px 12% !important;
-    }
-    .tsvc-img{
-        width: 100px !important;
-        height: 200px !important;
-        margin: 15px 16% !important;
-    }
-    /* ============= END ============ */
-    .varsity-text{    
-        font-size: 45px;
-    }
-    .alice-carousel__dots-item,
-    .alice-carousel__dots-item.__active{
-        margin-top: 45px !important;        
-        height: 4px !important;        
-    }
-    .alice-carousel__dots-item{        
-        width: 27px !important;
-    }
-    .alice-carousel__dots-item.__active{        
-        width: 49px !important;
-    }
-}
-
-@media screen and (max-width: 760px){
-    .cardd{
-        width: 170px;
-        margin: 0 13vw;        
-    }    
-    .cardd-body{
-        padding-top: 0;
-    }
-    .cardd-img img{
-        width: 65px;        
-        margin: 50px 51px;   
-    }
-    .cardd span{
-        opacity: 1;         
-    }
-    .cardd atas{
-        opacity: 1;
-    }
-    /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
-    .pustel-img{
-        margin: 50px 17% !important;
-    }
-
-    .metic-img{
-        width: 110px !important;
-        margin: 50px 10% !important;
-    }
-    .mac-img{
-        width: 100px !important;
-        height: 100px !important;
-        margin: 45px 12% !important;
-    }
-    .palwaga-img{
-        width: 110px !important;
-        height: 90px !important;
-        margin: 50px 9% !important;
-    }
-    .pmr-img{
-        width: 150px !important;
-        height: 80px !important;
-        margin: 55px 3% !important;
-    }
-    .tsbc-img{
-        width: 150px !important;
-        height: 90px !important;
-        margin: 50px 4% !important;
-    }
-    .tscc-img{
-        width: 100px !important;
-        height: 200px !important;
-        margin: 20px 12% !important;
-    }
-    .tsfc-img{
-        width: 100px !important;
-        height: 300px !important;
-        margin: 20px 12% !important;
-    }
-    .tsvc-img{
-        width: 100px !important;
-        height: 100px !important;
-        margin: 40px 12% !important;
-    }
-    /* ============= END ============ */
-    .cardd .cardd-img{
-        height: 160px;
-    }    
-    .varsity-text{    
-        font-size: 45px;
-    }
-    .alice-carousel__dots-item,
-    .alice-carousel__dots-item.__active{
-        margin-top: 35px !important;        
-        height: 4px !important;        
-    }
-    .alice-carousel__dots-item{        
-        width: 25px !important;
-    }
-    .alice-carousel__dots-item.__active{        
-        width: 44px !important;
-    }
-}
-@media screen and (max-width: 568px){
-    .cardd-img img{
-        width: 65px;        
-        margin: 50px 70px;   
-    }
-    .cardd{
-        width: 200px;
-        margin: 0 30vw;        
-    }
-    .modal-logo{
-        margin: 45px 37.7% !important;
-    }
-        /* CUSTOM CARD LOGO - IMG KARENA BEDA UKURAN */
-        .pustel-img{
-            width: 100px !important;
-            margin: 45px 17% !important;
-        }
-    
-        .metic-img{
-            width: 160px !important;
-            margin: 50px 7% !important;
-        }
-        .mac-img{
-            width: 100px !important;
-            height: 100px !important;
-            margin: 45px 16% !important;
-        }
-        .palwaga-img{
-            width: 110px !important;
-            height: 90px !important;
-            margin: 50px 13% !important;
-        }
-        .pmr-img{
-            width: 150px !important;
-            height: 90px !important;
-            margin: 49px 8% !important;
-        }
-        .tsbc-img{
-            width: 150px !important;
-            height: 90px !important;
-            margin: 50px 7% !important;
-        }
-        .tscc-img{
-            width: 130px !important;
-            height: 200px !important;
-            margin: 20px 12% !important;
-        }
-        .tsfc-img{
-            width: 130px !important;
-            height: 300px !important;
-            margin: 17px 12% !important;
-        }
-        .tsvc-img{
-            width: 100px !important;
-            height: 100px !important;
-            margin: 40px 17% !important;
-        }
-        .modal-metic{
-            height: 70px;
-            margin: 7vh 23%;
-        }
-        .modal-pustel{
-            margin: 7vh 33%;
-        }
-        .modal-mac{
-            margin: 4vh 30%;
-        }
-        .modal-palwaga{
-            margin: 4vh 37%;
-        }
-        .modal-pmr{
-            margin: 4vh 41%;
-        }
-        .modal-tsbc{
-            margin: 4vh 35%;
-        }
-        .modal-tscc{
-            margin: 4vh 30%;
-        }
-        .modal-tsfc{
-            margin: 4vh 28%;
-        }
-        .modal-tsvc{
-            height: 150px;
-            margin: 4vh 39%;
-        }
-        /* ============= END ============ */  
-}
-@media screen and (max-width: 480px){
-    .modal-logo{
-        margin: 40px 35% !important;
-    }    
-    .cardd{
-        width: 200px;
-        margin: 0 28vw;        
-    }
-    .varsity-text{
-        font-size: 30px;
-    }
-    .alice-carousel__dots-item,
-    .alice-carousel__dots-item.__active{
-        margin-top: 30px !important;        
-        height: 2.7px !important;        
-    }
-    .alice-carousel__dots-item{        
-        width: 17px !important;
-    }
-    .alice-carousel__dots-item.__active{        
-        width: 30px !important;
-    }
-    .modal-metic{
-        margin: 7vh 9%;
-    }
-    .modal-pustel{
-        margin: 7vh 29%;
-    }
-    .modal-mac{
-        margin: 4vh 26%;
-    }
-    .modal-palwaga{
-        margin: 4vh 35%;
-    }
-    .modal-pmr{
-        margin: 4vh 38%;
-    }
-    .modal-tsbc{
-        margin: 4vh 33%;
-    }
-    .modal-tscc{
-        margin: 4vh 27%;
-    }
-    .modal-tsfc{
-        margin: 4vh 23%;
-    }
-    .modal-tsvc{
-        margin: 4vh 36%;
-    }
-}
-@media screen and (max-width: 370px){
-    .modal-logo{
-        margin: 40px 29.5% !important;
-    } 
-    .cardd{
-        width: 200px;
-        margin: 0 22vw;        
-    }
 }
